style.css
body {
    align-items: center;
    background-color: black;
    display: flex;
    height: 100vh;
    justify-content: center;
    overflow: hidden;
    width: 100vw;
    user-select: none;
    -moz-user-select: none;
    image-rendering: optimizeSpeed;
    image-rendering: -moz-crisp-edges;
    image-rendering: -webkit-optimize-contrast;
    image-rendering: -o-crisp-edges;
    image-rendering: pixelated;
    -ms-interpolation-mode: nearest-neighbor;
}

img,
.button,
.link,
.clouds,
.component,
.component-inner,
#components-bg {
    position: absolute;
}

#game {
    cursor: url(./cursors/default.png), auto;
    position: relative;
}

#game:not(.loaded) {
    display: none;
}

.button {
    cursor: url(./cursors/pointer.png), auto;
}

.button.pressed .unpressed-button {
    display: none;
}

.button:not(.pressed) .pressed-button {
    display: none;
}

#game:not(.title) #title {
    display: none;
}

#game:not(.dress-up) #components-bg {
    display: none;
}

#game:not(.dress-up) #layers-icons,
#game:not(.dress-up) .component:not(.snapped) {
    display: none;
}

#game:not(.dress-up) .component-inner {
    pointer-events: none;
}

#game.dragging .component:not(.selected) .component-piece,
#game.dragging .layer-icon {
    pointer-events: none;
}

.link {
    cursor: url(./cursors/pointer.png), auto;
}

.background:not(.selected) {
    display: none;
}

.clouds {
    background-size: contain;
    height: 100%;
    width: 100%;
}

#base {
    pointer-events: none;
    z-index: 2;
}

#components-bg {
    background-color: rgba(0, 0, 0, .5);
}

.layer-icon {
    cursor: url(./cursors/pointer.png), auto;
    z-index: 100;
}

.layer-icon.selected {
    display: none;
}

.layer-selected-icon {
    cursor: url(./cursors/pointer.png), auto;
    z-index: 100;
}

.layer-selected-icon:not(.selected) {
    display: none;
}

.layer-components:not(.selected) .component:not(.snapped) {
    display: none;
}

.component {
    pointer-events: none;
}

.component.selected {
    z-index: 100 !important;
}

.component-inner {
    cursor: url(./cursors/move.png), auto;
    height: 100%;
    pointer-events: all;
    width: 100%;
    z-index: 100;
}

